# tree-sitter-elixir

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  index.js  package-lock.json  package.json
.github/workflows/: build.yml
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.cc
test/corpus/: atom.txt  binary_string.txt  bitstring.txt  boolean.txt  charlist.txt  comment.txt  expr_control_flow.txt  expr_fn.txt  expr_function_call.txt  expr_match.txt  expr_operators.txt  float.txt  for_comprehension.txt  integer.txt  keyword_list.txt  list.txt  map.txt  module.txt  module_attribute.txt  module_functions.txt  number.txt  semicolon.txt  sigil.txt  string.txt  string_interpolation.txt  struct.txt  tuple.txt  variable.txt
test/todo/: comment.txt  expr_control_flow_else.txt  expr_match.txt  for_comprehension_options.txt
